fix iniziali e punteggiatura

--- a/DocumentiInterni/StudioDiFattibilita/src/C4/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C4/main.tex
@@ -8,9 +8,9 @@ L’azienda proponente è particolarmente interessata a verificare la fattibilit
 
 \subsection{Prerequisiti}
 \begin{itemize}
-\item Studio delle librerie suggerite;
-\item Organizzazione ed utilizzo di database;
-\item Approfondimento delle principali tecnologie web.
+\item studio delle librerie suggerite;
+\item organizzazione ed utilizzo di database;
+\item approfondimento delle principali tecnologie web.
 \end{itemize}
 
 \subsection{Tecnologie coinvolte}
@@ -21,15 +21,15 @@ L’azienda proponente è particolarmente interessata a verificare la fattibilit
 \item \glo{HTML}: linguaggio di markup per la realizzazione e strutturazione dei siti web;
 \item \glo{CSS}: linguaggio per la formattazione e layout dei documenti web;
 \item \glo{SQL} oppure \glo{NoSQL}: sviluppo e gestione di database;
-\item \glo{Java}: linguaggio orientato agli oggetti per progettare applicativi;
+\item \glo{Java}: linguaggio orientato agli oggetti per progettare applicativi.
 \end{itemize}
 
 \subsection{Vincoli}
 \begin{itemize}
-\item Uso delle tecnologie proposte al paragrafo precedente;
-\item I dati da visualizzare devono avere almeno 15 dimensioni, deve però essere possibile rappresentare dati anche con un numero inferiore;
-\item I dati devono poter essere inseriti sia tramite query ad un database, sia tramite file di tipo CSV;
-\item Dovranno essere obbligatoriamente presenti almeno i seguenti tipi di visualizzazione:
+\item uso delle tecnologie proposte al paragrafo precedente;
+\item i dati da visualizzare devono avere almeno 15 dimensioni, deve però essere possibile rappresentare dati anche con un numero inferiore;
+\item i dati devono poter essere inseriti sia tramite query ad un database, sia tramite file di tipo CSV;
+\item dovranno essere obbligatoriamente presenti almeno i seguenti tipi di visualizzazione:
 \begin{itemize}
 \item \glo{Scatter Plot Matrix}: fino ad un massimo di 5 dimensioni. Presentazione a riquadri disposti a matrice di tutte le combinazioni di grafici a dispersione, aiuta a trovare dimensioni con forti correlazioni;
 \item \glo{Force Field}: grafico che traduce le distanze tra i dati in forze di attrazione e repulsione tra i punti nello spazio rappresentato, evidenziando i collegamenti e le strutture presenti;
@@ -39,24 +39,24 @@ L’azienda proponente è particolarmente interessata a verificare la fattibilit
 \end{itemize}
 L’azienda proponente valuta inoltre positivamente i seguenti requisiti opzionali:
 \begin{itemize}    
-\item Implementazione di ulteriori tipi di visualizzazioni grafiche, adattate a dati di almeno 3 dimensioni;
-\item Utilizzo di funzioni diverse da quelle previste di default da D3, per calcolare forze e distanze nelle relative visualizzazioni;
-\item Analisi automatiche per evidenziare situazioni di particolare interesse;
-\item Algoritmi di preparazione del dato precedenti alla sua rappresentazione grafica;
-\item Eventuali altre proposte da parte del fornitore, considerate adeguatamente valide.
+\item implementazione di ulteriori tipi di visualizzazioni grafiche, adattate a dati di almeno 3 dimensioni;
+\item utilizzo di funzioni diverse da quelle previste di default da D3, per calcolare forze e distanze nelle relative visualizzazioni;
+\item analisi automatiche per evidenziare situazioni di particolare interesse;
+\item algoritmi di preparazione del dato precedenti alla sua rappresentazione grafica;
+\item eventuali altre proposte da parte del fornitore, considerate adeguatamente valide.
 \end{itemize}
 
 \subsection{Aspetti positivi}
 \begin{itemize}
-\item Buone competenze in \glo{data science} sono al giorno d’oggi molto utili e richieste in ambito professionale;
-\item Arricchimento del bagaglio di conoscenze riguardo le tecnologie web e server-side;
-\item Il proponente ha esposto in modo chiaro e professionale i vari vincoli ed i casi d'uso presenti nel capitolato.
+\item buone competenze in \glo{data science} sono al giorno d’oggi molto utili e richieste in ambito professionale;
+\item arricchimento del bagaglio di conoscenze riguardo le tecnologie web e server-side;
+\item il proponente ha esposto in modo chiaro e professionale i vari vincoli ed i casi d'uso presenti nel capitolato.
 \end{itemize}
 \subsection{Aspetti critici}
 \begin{itemize}
-\item Il processo di pulizia e classificazione dei dati potrebbe diventare piuttosto lungo e ripetitivo, quindi richiedere molto tempo al resto del lavoro;
-\item Il progetto risulta non troppo stimolante;
-\item Il capitolato, nel complesso, non ha riscosso particolare interesse da parte del gruppo.
+\item il processo di pulizia e classificazione dei dati potrebbe diventare piuttosto lungo e ripetitivo, quindi richiedere molto tempo al resto del lavoro;
+\item il progetto risulta non troppo stimolante;
+\item il capitolato, nel complesso, non ha riscosso particolare interesse da parte del gruppo.
 \end{itemize}
 \subsection{Conclusioni}
 Seppur abbia degli indubbi aspetti positivi, il capitolato fin da subito non ha attirato l'interesse nella quasi totalità dei membri del team. Pertanto non è stato preso particolarmente in considerazione.
