--- a/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/ConsuntivoAnalisi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ConsuntivoPeriodo/src/ConsuntivoAnalisi.tex
@@ -22,7 +22,7 @@ Amministratore  &  35 & 0 & 700 & 700 & 0 \\
 Analista        & 71 & 4 & 1775 & 1675 & 100 \\
 Progettista     &   0 &   0 &    0 &  0 & 0 \\
 Programmatore   &   0 &   0 &    0 &  0 & 0 \\
-Verificatore    &  70 &  5 & 900 &  & 		75 \\
+Verificatore    &  70 &  5 & 1050 & 975 & 75 \\
 \textbf{Totale} & 211 & 202 & 4575 & 4400 & 175 \\	
 
 \end{longtable}
@@ -44,6 +44,7 @@ La suddivisione a stadi di una fase permette di migliorare la produttività del 
 	\item Dai \textbf{verificatori}, che validano i deliverables relativi a quello stadio;
 	\item E dal \textbf{responsabile}, che verifica la presenza di eventuali problematiche e si attiva nel risolverle.
 \end{itemize}
+L'esperienza maturata dai componenti del team verrà trasmessa ad altri membri del gruppo che devono ancora lavorare in quel ruolo, al fine di ridurre le ore di pianificazione oraria per ciascun ruolo nelle fasi successive.
 Questo fa presupporre che anche i futuri scostamenti siano abbastanza in linea con quello preventivato.
 \subsubsection{Preventivo a finire}
 Il costo effettivo di questa prima fase non ha influenza sul preventivo in quanto esso si basa solamente sui costi preventivati nelle fasi successive di Progettazione, Codifica, Collaudo.\\
