--- a/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/RegistroModifiche.tex
@@ -23,7 +23,7 @@
         2021-01-09 & 
         Aggiunti dettagli finali e correzioni & 
         Elvis Murtezan, Giovanni Grigoletto  & 
-        \redattore{} \\
+        \responsabile{} \\
 
         0.1.0  & 
         2021-01-05 & 
@@ -35,48 +35,48 @@
         2021-01-03 & 
         Aggiunti grafici & 
         Elvis Murtezan  & 
-        \redattore{} \\
+        \responsabile{} \\
 
         0.0.7  & 
         2021-01-03 & 
         Aggiornato preventivo architettura e preventivo al dettaglio & 
         Elvis Murtezan  & 
-        \redattore{} \\
+        \responsabile{} \\
 
         0.0.6  & 
         2021-01-02 & 
         Stesura preventivo analisi e consuntivo & 
         Elvis Murtezan  & 
-        \redattore{} \\
+        \responsabile{} \\
 
         0.0.5  & 
         2021-01-02 & 
         Aggiunta pianificazione & 
         Giovanni Grigoletto & 
-        \redattore{} \\
+        \responsabile{} \\
 
         0.0.4  & 
         2020-12-28 & 
         Aggiunto organigramma e preventivo parziale & 
         Elvis Murtezan  & 
-        \redattore{} \\
+        \responsabile{} \\
 
         0.0.3  & 
         2020-12-28 & 
         Aggiunto modello di sviluppo & 
         Giovanni Grigoletto & 
-        \redattore{} \\
+        \responsabile{} \\
         
         0.0.2  & 
         2020-12-26 & 
         Aggunta introduzione ed analisi dei rischi & 
         Giovanni Grigoletto & 
-        \redattore{} \\
+        \responsabile{} \\
 
         0.0.1  & 
         2020-12-23 & 
         Stesura template iniziale & 
         Giovanni Grigoletto, Elvis Murtezan & 
-        \redattore{} \\
+        \responsabile{} \\
     \end{longtable}
 }
