Fix small errors

--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/GestioneDellaQualita.tex
@@ -105,6 +105,6 @@ Dove:
 			\item R: test di regressione;
 			\item A: test di accettazione.
 		\end{itemize}
-		\item X è l'ID univoco e prograssivo utile per identificare il test;
+		\item X è l'ID univoco e progressivo utile per identificare il test;
 		\item E identifica l'esito di un test, che può essere positivo o negativo.
 \end{itemize}
