--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
@@ -76,5 +76,5 @@ dove:
 Ogni immagine, in aggiunta, sarà correlata da una breve descrizione della stessa, posizionata in centro pagina.
 
 \subsubsection{Diagrammi UML}
-Ogni diagramma \glo{UML} inserito all’interno della documentazione avrà estensione png. Il programma atto alla creazione dei diagrammi \glo{UML} sarà \glo{StarUML} o, in alternativa, Draw.IO.
+Ogni diagramma \glo{UML} inserito all’interno della documentazione avrà estensione png. Il programma atto alla creazione dei diagrammi \glo{UML} sarà Draw.IO.
 
