sistemato verbale andrea

--- a/DocumentiInterni/Verbali/20201222/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/20201222/src/Comandi.tex
@@ -1,15 +1,15 @@
 \newcommand{\Titolo}{Verbale interno del 2020-12-22}
 
-\newcommand{\Approvatore}{}
-\newcommand{\Redattori}{De Tomasi Andrea}
-\newcommand{\Verificatori}{}
+\newcommand{\Approvatore}{Giovanni Grigoretto} 
+\newcommand{\Redattori}{Andrea De Tomasi} 
+\newcommand{\Verificatori}{Abdelwahad kandoul} 
 
 \newcommand{\pathimg}{../../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{0.0.0}
+\newcommand{\Versionedoc}{1.0.0}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin \newline Sweleven}
 
-\newcommand{\Uso}{Interno}
+\newcommand{\Uso}{Interno} 
 
 \newcommand{\DescrizioneDoc}{Riassunto dell'incontro del gruppo \textit{Sweleven} tenutosi il 2020-12-22.}
