--- a/DocumentiInterni/Verbali/20201222/src/RegistroModifiche.tex
+++ b/DocumentiInterni/Verbali/20201222/src/RegistroModifiche.tex
@@ -13,8 +13,8 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        X.X.X                  & XXXX-XX-XX                                       & Responsabile                                & TODO & \responsabile{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Verifica                                    & TODO & \verificatore{} \\
-        0.0.0                  & 2020-12-22                                       & Descrizione edit                            & De Tomasi Andrea & \redattore{}    \\
+        1.0.0                  & 2021-01-04                                       & Responsabile                                & Giovanni Grigoretto & \responsabile{} \\
+        0.1.0                  & 2020-12-24                                       & Verifica                                    & Abdelwahad Kandoul & \verificatore{} \\
+        0.0.1                  & 2020-12-22                                       & Descrizione edit                            & De Tomasi Andrea & \analista{}    \\
     \end{longtable}
 }
