--- a/DocumentiEsterni/PianoDiQualifica/src/SpecificaDeiTest/main.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/SpecificaDeiTest/main.tex
@@ -6,3 +6,5 @@
 \input{src/SpecificaDeiTest/src/TestDiIntegrazione/main.tex}
 \subsection{Test di unità}
 \input{src/SpecificaDeiTest/src/TestDiUnita/main.tex}
+\subsection{Test di regressione}
+\input{src/SpecificaDeiTest/src/TestDiRegressione/main.tex}
