Fix compilazione piano di progetto

--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoCollaudo.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoCollaudo.tex
@@ -65,36 +65,34 @@ La suddivisione delle preventivate per ciascun componente del gruppo per ogni ru
 	\end{tikzpicture}
 \end{center}
 \clearpage
-\begin{comment}
-\subsubsection{Ore e costi degli incrementi}
-La seguente tabella rappresenta la distribuzione delle ore investite durante il periodo in cui vengono svolti gli incrementi e il corrispondente costo in euro.
+% \subsubsection{Ore e costi degli incrementi}
+% La seguente tabella rappresenta la distribuzione delle ore investite durante il periodo in cui vengono svolti gli incrementi e il corrispondente costo in euro.
 
 
-{
-\rowcolors{2}{\evenRowColor}{\oddRowColor}
-\renewcommand{\arraystretch}{1.65}
-\centering
-\begin{longtable}{ C{2.1cm} C{2.7cm} C{3cm} C{3cm} C{3.3cm} }
-\caption{Tabella del costo risultante di ogni incremento}\\
-\rowcolor{\primaryColor}
-\textcolor{\secondaryColor}{\textbf{Incremento}} & 
-\textcolor{\secondaryColor}{\textbf{Ore progettista}} &
-\textcolor{\secondaryColor}{\textbf{Ore programmatore}}&
-\textcolor{\secondaryColor}{\textbf{Ore verificatore}}&
-\textcolor{\secondaryColor}{\textbf{Costo totale incremento (in \euro{})}}\\
-\endhead
+% {
+% \rowcolors{2}{\evenRowColor}{\oddRowColor}
+% \renewcommand{\arraystretch}{1.65}
+% \centering
+% \begin{longtable}{ C{2.1cm} C{2.7cm} C{3cm} C{3cm} C{3.3cm} }
+% \caption{Tabella del costo risultante di ogni incremento}\\
+% \rowcolor{\primaryColor}
+% \textcolor{\secondaryColor}{\textbf{Incremento}} & 
+% \textcolor{\secondaryColor}{\textbf{Ore progettista}} &
+% \textcolor{\secondaryColor}{\textbf{Ore programmatore}}&
+% \textcolor{\secondaryColor}{\textbf{Ore verificatore}}&
+% \textcolor{\secondaryColor}{\textbf{Costo totale incremento (in \euro{})}}\\
+% \endhead
 
 
 
-x & x & x & x & x \\
-x & x & x & x & x \\
-x & x & x & x & x \\
-x & x & x & x & x \\
+% x & x & x & x & x \\
+% x & x & x & x & x \\
+% x & x & x & x & x \\
+% x & x & x & x & x \\
 
 
-\end{longtable}
-}
-\end{comment}
+% \end{longtable}
+% }
 \subsubsection{Costo risultante}
 La seguente tabella rappresenta le ore totali investite e il corrispondente costo in euro per ogni ruolo:
 {
