--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoCodifica.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoCodifica.tex
@@ -64,38 +64,36 @@ La suddivisione delle ore preventivate per ciascun componente del gruppo e per o
 	\end{tikzpicture}
 \end{center}
 \clearpage
-\begin{comment}
-\subsubsection{Ore e costi degli incrementi}
-La seguente tabella rappresenta la distribuzione delle ore investite durante il periodo in cui vengono svolti gli incrementi e il corrispondente costo in euro.
+% \subsubsection{Ore e costi degli incrementi}
+% La seguente tabella rappresenta la distribuzione delle ore investite durante il periodo in cui vengono svolti gli incrementi e il corrispondente costo in euro.
 
 
-{
-\rowcolors{2}{\evenRowColor}{\oddRowColor}
-\renewcommand{\arraystretch}{1.65}
-\centering
-\begin{longtable}{ C{2.1cm} C{2.7cm} C{3cm} C{3cm} C{3.3cm} }
-\caption{Tabella del costo risultante di ogni incremento}\\
-\rowcolor{\primaryColor}
-\textcolor{\secondaryColor}{\textbf{Incremento}} & 
-\textcolor{\secondaryColor}{\textbf{Ore progettista}} &
-\textcolor{\secondaryColor}{\textbf{Ore programmatore}}&
-\textcolor{\secondaryColor}{\textbf{Ore verificatore}}&
-\textcolor{\secondaryColor}{\textbf{Costo totale incremento (in \euro{})}}\\
-\endhead
+% {
+% \rowcolors{2}{\evenRowColor}{\oddRowColor}
+% \renewcommand{\arraystretch}{1.65}
+% \centering
+% \begin{longtable}{ C{2.1cm} C{2.7cm} C{3cm} C{3cm} C{3.3cm} }
+% \caption{Tabella del costo risultante di ogni incremento}\\
+% \rowcolor{\primaryColor}
+% \textcolor{\secondaryColor}{\textbf{Incremento}} & 
+% \textcolor{\secondaryColor}{\textbf{Ore progettista}} &
+% \textcolor{\secondaryColor}{\textbf{Ore programmatore}}&
+% \textcolor{\secondaryColor}{\textbf{Ore verificatore}}&
+% \textcolor{\secondaryColor}{\textbf{Costo totale incremento (in \euro{})}}\\
+% \endhead
 
 
-x & x & x & x & x\\
-x & x & x & x & x\\
-x & x & x & x & x\\
-x & x & x & x & x\\
-x & x & x & x & x\\
+% x & x & x & x & x\\
+% x & x & x & x & x\\
+% x & x & x & x & x\\
+% x & x & x & x & x\\
+% x & x & x & x & x\\
 
 
 
-\end{longtable}
-}
+% \end{longtable}
+% }
 
-\end{comment}
 
 \subsubsection{Costo risultante}
 La seguente tabella rappresenta, per ruolo, le ore preventivate totali e il corrispondente costo in euro:
