Termine templatizzazione verbali

--- a/DocumentiInterni/Verbali/verbale 11-12-2020/src/RegistroModifiche.tex
+++ b/DocumentiInterni/Verbali/verbale 11-12-2020/src/RegistroModifiche.tex
@@ -9,12 +9,12 @@
         {\textbf{Descrizione}} & \textcolor{\secondaryColor}{\textbf{Nominativo}} & \textcolor{\secondaryColor}{\textbf{Ruolo}}                          \\
 
         % usare \verificatore per indicare verificatore
-        % usare \redattore per indicare redattore
+        % usare \redattore per indicare redatore
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        1.5.0                  & 2021-01-08                                       & Responsabile                                & TODO & \responsabile{} \\
-        1.5.0                  & 2021-01-08                                       & Verifica                                    & Edoardo Caregnato & \verificatore{} \\
-        1.0.0                  & 2021-01-06                                       & Descrizione                            & Elvis Murtezan & \redattore{}    \\
+        X.X.X                  & XXXX-XX-XX                                       & Responsabile                                & TODO & \responsabile{} \\
+        X.X.X                  & 2020-01-08                                      & Verifica                                   	 & Edoardo Caregnato & \verificatore{} \\
+        0.0.1                  & 2020-12-17						 & Stesura documento 		& Abdelwahad Kandoul & \redattore{}    \\
     \end{longtable}
 }
