--- a/DocumentiInterni/Verbali/verbale 31-10-2020/src/RegistroModifiche.tex
+++ b/DocumentiInterni/Verbali/verbale 31-10-2020/src/RegistroModifiche.tex
@@ -13,8 +13,8 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        X.X.X                  & XXXX-XX-XX                                       & Responsabile                                & TODO & \responsabile{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Verifica                                    & TODO & \verificatore{} \\
-        0.0.1                  & 2020-12-17 & Stesura documento & Abdelwahad kandoul & \redattore{}    \\
+        1.5.0                  & XXXX-XX-XX                                       & Responsabile                                & TODO & \responsabile{} \\
+        1.5.0                  & 2021-01-08                                       & Verifica                                    & Edoardo Caregnato & \verificatore{} \\
+        1.0.0                  & 2020-10-31                                      & Descrizione                           & Alessio Trevisan & \redattore{}    \\
     \end{longtable}
 }
