Fix versioning verbali

--- a/DocumentiInterni/Verbali/verbale 11-12-2020/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/verbale 11-12-2020/src/Comandi.tex
@@ -2,7 +2,7 @@
 
 \newcommand{\Approvatore}{}
 \newcommand{\Redattori}{Abdelwahad Kandoul}
-\newcommand{\Verificatori}{}
+\newcommand{\Verificatori}{Edoardo Caregnato}
 
 \newcommand{\pathimg}{../../../Shared/logo.png}
 
