--- a/DocumentiInterni/Verbali/verbale 18-12-2020/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/verbale 18-12-2020/src/Comandi.tex
@@ -10,6 +10,6 @@
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin \newline Sweleven}
 
-\newcommand{\Uso}{Interno}
+\newcommand{\Uso}{Esterno}
 
 \newcommand{\DescrizioneDoc}{Riassunto dell'incontro del gruppo \textit{Sweleven} con tenutosi in data 18-12-2020.}
