--- a/DocumentiInterni/Verbali/verbale 05-01-2021/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/verbale 05-01-2021/src/Comandi.tex
@@ -1,6 +1,6 @@
 \newcommand{\Titolo}{Verbale interno del 05-01-2021}
 
-\newcommand{\Approvatore}{}
+\newcommand{\Approvatore}{Giovanni Grigoletto}
 \newcommand{\Redattori}{Elvis Murtezan}
 \newcommand{\Verificatori}{Edoardo Caregnato}
 
