--- a/DocumentiInterni/Verbali/verbale 11-12-2020/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/verbale 11-12-2020/src/Comandi.tex
@@ -1,6 +1,6 @@
 \newcommand{\Titolo}{Verbale interno del 11-12-2020}
 
-\newcommand{\Approvatore}{}
+\newcommand{\Approvatore}{Giovanni Grigoletto}
 \newcommand{\Redattori}{Abdelwahad Kandoul}
 \newcommand{\Verificatori}{Edoardo Caregnato}
 
