--- a/DocumentiInterni/Verbali/verbale 18-12-2020/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/verbale 18-12-2020/src/Comandi.tex
@@ -1,8 +1,8 @@
 \newcommand{\Titolo}{Verbale interno del 18-12-2020}
 
-\newcommand{\Approvatore}{}
+\newcommand{\Approvatore}{Elvis Murtezan}
 \newcommand{\Redattori}{Edoardo Caregnato}
-\newcommand{\Verificatori}{}
+\newcommand{\Verificatori}{Filippo Pinton}
 
 \newcommand{\pathimg}{../../../Shared/logo.png}
 
