--- a/DocumentiInterni/Verbali/verbale 31-10-2020/src/Comandi.tex
+++ b/DocumentiInterni/Verbali/verbale 31-10-2020/src/Comandi.tex
@@ -1,8 +1,8 @@
 \newcommand{\Titolo}{Verbale interno del 31-10-2020}
 
-\newcommand{\Approvatore}{}
+\newcommand{\Approvatore}{Elvis Murtezan}
 \newcommand{\Redattori}{Alessio Trevisan}
-\newcommand{\Verificatori}{}
+\newcommand{\Verificatori}{Edoardo Caregnato}
 
 \newcommand{\pathimg}{../../../Shared/logo.png}
 
