--- a/DocumentiInterni/Verbali/verbale 05-01-2021/src/RegistroModifiche.tex
+++ b/DocumentiInterni/Verbali/verbale 05-01-2021/src/RegistroModifiche.tex
@@ -13,7 +13,7 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        1.0.0                  & 2021-01-08                                       & Responsabile                                & TODO & \responsabile{} \\
+        1.0.0                  & 2021-01-08                                       & Responsabile                                & Giovanni Grigoletto & \responsabile{} \\
         0.1.0                  & 2021-01-08                                       & Verifica                                    & Edoardo Caregnato & \verificatore{} \\
         0.0.1                  & 2021-01-06                                       & Descrizione                            & Elvis Murtezan & \redattore{}    \\
     \end{longtable}
