--- a/DocumentiInterni/Verbali/verbale 11-12-2020/src/RegistroModifiche.tex
+++ b/DocumentiInterni/Verbali/verbale 11-12-2020/src/RegistroModifiche.tex
@@ -13,7 +13,7 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        1.0.0                  & XXXX-XX-XX                                       & Responsabile                                & TODO & \responsabile{} \\
+        1.0.0                  & 2021-01-08                                       & Responsabile                                & Giovanni Grigoletto & \responsabile{} \\
         0.1.0                 & 2020-01-08                                      & Verifica                                   	 & Edoardo Caregnato & \verificatore{} \\
         0.0.1                  & 2020-12-17						 & Stesura documento 		& Abdelwahad Kandoul & \redattore{}    \\
     \end{longtable}
