--- a/DocumentiInterni/Verbali/verbale 18-12-2020/src/RegistroModifiche.tex
+++ b/DocumentiInterni/Verbali/verbale 18-12-2020/src/RegistroModifiche.tex
@@ -13,8 +13,8 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        1.0.0                  & 2021-01-08                                       & Responsabile                                & TODO & \responsabile{} \\
-        0.1.0                  & 2021-01-08                                      & Verifica                                    & TODO & \verificatore{} \\
+        1.0.0                  & 2021-01-08                                       & Responsabile                                & Elvis Murtezan & \responsabile{} \\
+        0.1.0                  & 2021-01-08                                      & Verifica                                    & Filippo Pinton & \verificatore{} \\
         0.0.1                  & 2020-12-19                                       & Descrizione edit                            & Caregnato Edoardo & \redattore{}    \\
     \end{longtable}
 }
