--- a/DocumentiInterni/StudioDiFattibilita/src/C2/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C2/main.tex
@@ -1,19 +1,19 @@
 \subsection{Informazioni generali}
 \input{src/C2/src/Informazioni_generali.tex}
 
-\subsection{Descrizione}
+\subsection{Descrizione del capitolato}
 \input{src/C2/src/Descrizione.tex}
 
-\subsection{Finalità del progetto}
+\subsection{Prerequisiti}
 \input{src/C2//src/Finalita_del_progetto.tex}
 
-\subsection{Tecnologie interessate}
+\subsection{Tecnologie coinvolte}
 \input{src/C2//src/Tecnologie_interessate.tex}
 
 \subsection{Aspetti positivi}
 \input{src/C2//src/Aspetti_positivi.tex}
 
-\subsection{Criticità e fattori di rischio}
+\subsection{Aspetti critici}
 \input{src/C2//src/Criticita_e_fattori_di_rischio.tex}
 
 \subsection{Conclusioni}
