fix consuntivo spostato e modificato

--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/ConsuntivoAnalisi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/ConsuntivoAnalisi.tex
@@ -1,8 +1,7 @@
-\subsection{Analisi dei Requisiti}
-\subsubsection{Bilancio}
-Il bilancio della fase di Analisi è positivo, ovvero il gruppo ha impiegato meno ore di quelle anticipate, quindi il costo finale della fase di Analisi è minore dell'aspettativa calcolata in precedenza.\\
+\newpage
+\subsubsection{Bilancio Investimento fase di Analisi}
+Il bilancio della fase di Analisi è positivo, ovvero il gruppo ha impiegato meno ore di quelle anticipate, quindi il costo dell'investimento finale della fase di Analisi è di poco inferiore rispetto all'investimento preventivato.\\
 La seguente tabella illustra la differenza oraria ed economica rilevata a posteriori.
-
 {
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{2}
@@ -35,17 +34,14 @@ Come riportato dalla tabella, il bilancio risulta essere positivo per i seguenti
 	\item \textbf{Amministratore}: {uno dei componenti del gruppo aveva già esperienza in merito a vari strumenti e tecnologie utilizzabili per migliorare la produttività del gruppo,ma è stato tenuto 
 	conto del inesperienza di alcuni componenti del team che hanno avuto tale responsabilità;}
 	\item \textbf{Analista}: {è in linea col preventivo}
-	\item \textbf{Verificatore}: {lo scostamento è in linea con il preventivo all'incirca come quelle dell'analista che sono molto legate tra di loro nella fase di analisi.}
+	\item \textbf{Verificatore}: {lo scostamento è in linea con il preventivo dell'analista che sono molto legate tra di loro nella fase di analisi.}
 \end{itemize}
-
-\subsubsection{Ragionamento sugli scostamenti}
-La suddivisione a stadi di una fase permette di migliorare la produttività del team, visto che viene effettuato un check intermedio sostanziale alla fine di uno stadio:
+La suddivisione a stadi di una fase permette di migliorare la produttività del team incrementalmente, visto che viene effettuato un check intermedio sostanziale alla fine di uno stadio:
 \begin{itemize}
 	\item Dai \textbf{verificatori}, che validano i deliverables relativi a quello stadio;
 	\item E dal \textbf{responsabile}, che verifica la presenza di eventuali problematiche e si attiva nel risolverle.
 \end{itemize}
 L'esperienza maturata dai componenti del team verrà trasmessa ad altri membri del gruppo che devono ancora lavorare in quel ruolo, al fine di ridurre le ore di pianificazione oraria per ciascun ruolo nelle fasi successive.
 Questo fa presupporre che anche i futuri scostamenti siano abbastanza in linea con quello preventivato.
-\subsubsection{Preventivo a finire}
 Il costo effettivo di questa prima fase non ha influenza sul preventivo in quanto esso si basa solamente sui costi preventivati nelle fasi successive di Progettazione, Codifica, Collaudo.\\
 Ciò non toglie che ragionando sugli scostamenti, il gruppo deve prestare qualche attenzione in più sulla pianificazione oraria, ma nel complesso il team pianifica e lavora bene.
