--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoAnalisi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoAnalisi.tex
@@ -1,4 +1,4 @@
-\subsection{Analisi}
+\subsection{Investimento fase di Analisi}
 
 \subsubsection{Divisione oraria}
 La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni componente del gruppo:
@@ -31,7 +31,7 @@ La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni compo
 \end{longtable}
 }
 % Responsabile color=blue, Amministratore color=yellow, Analista color=red, Progettista color=green, Programmatore color=grigetto, Verificatore color=orange  [ybar, fill=] blue, yellow, red, green, grigetto, orange
-La suddivisione delle ore svolte da ciascun componente del gruppo per ogni ruolo viene rappresentata nel seguente istogramma:
+Il preventivo delle ore da investire per ciascun componente del gruppo per ogni ruolo viene rappresentata nel seguente istogramma:
 \begin{center}
 	\pgfplotsset{width=17cm, height=8.5cm}
 	\begin{tikzpicture}
@@ -90,7 +90,7 @@ Verificatore    &  70 & 1050 \\
 }
 
 \vskip 30pt %spazio verticale
-La quantità di ore totali per ciascun ruolo viene rappresentata nel seguente areogramma:
+La quantità di ore totali investite per ciascun ruolo viene rappresentata nel seguente areogramma:
 \begin{center}
 	\pgfplotsset{width=17cm, height=8.5cm}
 	\begin{tikzpicture}
@@ -102,3 +102,4 @@ La quantità di ore totali per ciascun ruolo viene rappresentata nel seguente ar
 		}
 	\end{tikzpicture}
 \end{center}
+\input{./src/Preventivo/src/ConsuntivoAnalisi.tex}
