--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoCodifica.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoCodifica.tex
@@ -1,4 +1,4 @@
-\subsection{Codifica}
+\subsection{Preventivo fase di Codifica}
 
 \subsubsection{Divisione oraria}
 La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni componente del gruppo:
