--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoCollaudo.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoCollaudo.tex
@@ -1,4 +1,4 @@
-\subsection{Collaudo}
+\subsection{Preventivo fase di Collaudo}
 
 \subsubsection{Divisione oraria}
 La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni componente del gruppo:
