--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoProgettazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoProgettazione.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsection{Progettazione}
+\subsection{Preventivo fase di Progettazione}
 
 \subsubsection{Divisione oraria}
 La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni componente del gruppo:
