--- a/DocumentiEsterni/PianoDiProgetto/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/main.tex
@@ -52,9 +52,9 @@
     \section{Preventivo}\label{sec:Preventivo}
     \input{src/Preventivo/main.tex}
 
-    \newpage
-    \section{Consuntivo Periodo}\label{sec:Consuntivo-periodo}
-    \input{src/ConsuntivoPeriodo/main.tex}
+    %\newpage
+    %\section{Consuntivo Periodo}\label{sec:Consuntivo-periodo}
+    %\input{src/ConsuntivoPeriodo/main.tex}
 
     \newpage
     \section{Organigramma}\label{sec:Organigramma}
